--- a/Pipfile
+++ b/Pipfile
@@ -4,16 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-fastapi = "*"
 uvicorn = "*"
+fastapi = "*"
 joblib = "*"
-pylint = "*"
 pydantic = "*"
-coverage = "*"
 pandas = "*"
-numpy = "*"
-scikit-learn = "*"
-pytest = "*"
+scikit-learn = "==1.2.2"
+pylint = "*"
+coverage = "*"
+numpy = "==1.23.4"
 
 [dev-packages]
 
